objects/BMCServiceDesk__Data_Integrity_Information__c.object
<CustomObject>
    <description>This object stores details about records that are impacted by other deleted, modified, or unused records in BMC Remedyforce.</description>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <description>Provides details about the modified or deleted field value in an impacted record.</description>
        <label>Scan Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImpactedModule__c</fullName>
        <description>Stores the module that contains a record that is impacted by other modified, deleted, or unused records in BMC Remedyforce.</description>
        <label>Impacted Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impacted_Field_Name__c</fullName>
        <description>Stores the name of the field with modified or deleted values in the impacted record.</description>
        <label>Impacted Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impacted_Object_Name__c</fullName>
        <description>Stores the name of the object that contains the field with modified or deleted values in the impacted record.</description>
        <label>Impacted Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impacted_Record__c</fullName>
        <description>Stores the record whose fields contain modified or deleted values that are referred from another object.</description>
        <label>Impacted Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Missing_Field_Id__c</fullName>
        <description>Stores the ID of the modified or deleted value that is currently selected in the impacted field.</description>
        <label>Missing Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Missing_Field_Value__c</fullName>
        <description>Stores the modified or deleted value that is currently selected in the impacted field. The modified or deleted value maps to a deleted or modified record in another object.</description>
        <label>Missing Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Missing_Record_Object_Name__c</fullName>
        <description>Stores the name of the object from where the record is modified or deleted which is referred in the impacted record.</description>
        <label>Missing Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ScanId__c</fullName>
        <description>Stores the unique ID assigned to all impacted records that are found during a scan.</description>
        <label>ScanId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Scan_Instance__c</fullName>
        <description>Indicates the scan in which the impacted record was found. Current indicates that the record was found in the latest scan. Last indicates that the record was found in the previous scan.</description>
        <label>Scan Instance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Severity__c</fullName>
        <description>Error is displayed when the missing field value and ID are not found in the referred from object or a lookup field value is NULL. Warning is displayed when only the missing field value is not found in the referred from object.</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Integrity Information</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Integrity Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>